# research

./: .gitignore  LICENSE.md  README.md  _config.yaml  index.html  problem-template.md  pyproject.toml
PUBLIC_DOCS/: TEST.md
b7a875fc1ea228b9061041b7cec4bd3c52ab3ce3/: TEST.md  index.md
notebooks/: pyproject.toml
notebooks/misc/: LP Probability of Trading Payouts.ipynb  Leverage calculations.ipynb  Margin level price approximation.ipynb  Misc position metrics.ipynb  Price monitroing bounds.ipynb
notebooks/misc/utils/: helpers.py  risk_models.py
notebooks/papers/liquidity/: Fee Calculations.ipynb  README.md  Single Market Maker - via Pontryagin.ipynb  Single Market Maker.ipynb  Two Market Makers - via Pontryagin.ipynb  Two Market Makers.ipynb  Volume Response Model Multiple Market Makers - via Pontryagin.ipynb  Volume Response Model Single Market Maker - via Pontryagin.ipynb
notebooks/papers/perps/: generate_charts.ipynb
notebooks/perps/: funding_rate_experiments.ipynb  oracle_experiments.ipynb  pyproject.toml
notebooks/perps/data/: perps_3.csv  spot_1.csv
notebooks/perps/data/funding_rate_experiments/: perps_1.csv  perps_2.csv  spot_2.csv
notebooks/perps/modules/: curves.py  figures.py  perps.py  plots.py  test_curves.py  test_perps.py  ui.py
notes/: mcap-futures-markets-settlement.md  points-markets-settlement.md
papers/: disclaimer.tex
problems/: beyond-proof-of-stake.md  beyond-stake.md  blockchain-self-governance.md  constrained-order-books.md  decentralised-risk-management.md  economic-impact-of-decentralised-finance.md  liquidity-markets.md  margins-as-options.md  mock-problem.md  obfuscated-order-books.md  profit-attribution.md  reward-distribution.md  (+1 more)
(+10 files in other folders)
