[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyterlab = "^3.5.2"
jupyter = "^1.0.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
vega-sim = "^0.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
